fix (z-index inutile tolto)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,6 @@ h6{
     position: absolute;
     bottom: 30px;
     left: 0px;
-    z-index: 1;
 }
 
 .green{
